[gd_scene load_steps=2 format=3 uid="uid://c6gb10qkoj7bx"]

[ext_resource type="Script" path="res://characters/components/damage.gd" id="1_s03sk"]

[node name="Damage" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_s03sk")
health = null

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="FallDownCancel" type="Timer" parent="."]
one_shot = true

[node name="FallDown" type="Timer" parent="."]
one_shot = true

[node name="GetUp" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="FallDownCancel" to="." method="_on_fall_down_cancel_timeout"]
[connection signal="timeout" from="FallDown" to="." method="_on_fall_down_timeout"]
[connection signal="timeout" from="GetUp" to="." method="_on_get_up_timeout"]
